# gibbon

./: .gitignore  gibbon-scheme.xcf
catkin_ws/: config_env.sh  local_config_acados.sh
catkin_ws/control/: CMakeLists.txt  package.xml
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: joint_state_publisher.pc  joint_state_publisher_gui.pc  urdf_tutorial.pc
catkin_ws/devel/lib/python3/dist-packages/joint_state_publisher/: __init__.py
catkin_ws/devel/lib/python3/dist-packages/joint_state_publisher_gui/: __init__.py
catkin_ws/devel/share/joint_state_publisher/cmake/: joint_state_publisherConfig.cmake
catkin_ws/devel/share/joint_state_publisher_gui/cmake/: joint_state_publisher_guiConfig.cmake
catkin_ws/devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/include/: params_manager.h
catkin_ws/src/control/include/control/: Control.h  Math.h  Model.h  ParamsManager.h  Visualize.h
catkin_ws/src/control/launch/: control.launch
catkin_ws/src/control/src/: Control.cpp  control_node.cpp
catkin_ws/src/gibbon/: CMakeLists.txt  package.xml
catkin_ws/src/gibbon/config/: drive.yaml  joints.yaml  l1_dl.yaml  l1_dr.yaml  l2_dl.yaml  l2_dr.yaml
catkin_ws/src/gibbon/launch/: gazebo.launch  urdf.launch
catkin_ws/src/gibbon/rviz/: basic.rviz
catkin_ws/src/gibbon/urdf/: gibbon.urdf  gibbon.xacro  gibbon2.xacro  gibbon_with_ns.xacro  ladder.sdf  ladder.urdf  ladder.xacro
catkin_ws/src/gibbon/urdf/models/: gibbon.sdf  ladder.sdf  ladder.urdf
catkin_ws/src/mpc_solver/: CMakeLists.txt  package.xml
catkin_ws/src/mpc_solver/config/: acados_ocp_gibbon.json
catkin_ws/src/mpc_solver/launch/: mpc.launch
catkin_ws/src/mpc_solver/src/: gibbon_model.py  mpc_node.py
catkin_ws/src/mpc_solver/srv/: mpc_solve.srv
gazebo/: main.world
gazebo/ladder/: model.config
gazebo/monkey/: model.config  model.urdf
